--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -177,6 +177,11 @@ p {
   padding: 60px;
 }
 
+.main-wrapper p span {
+  font-weight: 600;
+  color: #2d7788;
+}
+
 .main-wrapper .section-title {
   text-transform: uppercase;
   font-size: 20px;
